src/main/java/com/example/updatemebook/errors/AuthenticationFailedException.java
package com.example.updatemebook.errors;


public class AuthenticationFailedException extends RuntimeException {

    public AuthenticationFailedException(String message){
        super(message);
    }
 }
